[package]
name = "breakout_rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.0"
rand = "0.8.5"
csv = "1.1"
serde = {version = "1.0", features = ["derive"]}

#[[bin]]
#name = "BreakoutVis"

#[[bin]]
#name = "RL_Training"
